add some documentation

--- a/01_Create_polygon_mask.ipynb
+++ b/01_Create_polygon_mask.ipynb
@@ -68,7 +68,7 @@
    "id": "a36c875c-cc80-4ed3-ab02-26ba63afc7e9",
    "metadata": {},
    "source": [
-    "### Set filepaths and parameters"
+    "### 1. Set filepaths and parameters"
    ]
   },
   {
@@ -146,9 +146,11 @@
   {
    "cell_type": "markdown",
    "id": "600bc549-25ec-4232-ac77-4bdc8ff3eb93",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
-    "### Create Sentinel-2 mask"
+    "### 2. Create Sentinel-2 mask"
    ]
   },
   {
@@ -279,9 +281,11 @@
   {
    "cell_type": "markdown",
    "id": "3a257270-56cb-4922-b62f-6751f51ec239",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
-    "### Create Landsat mask"
+    "### 3. Create Landsat mask"
    ]
   },
   {
@@ -380,12 +384,14 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "30f21cf7-6731-4c07-83df-c0fd84182ea8",
+   "cell_type": "markdown",
+   "id": "17a9dccf-abc0-4157-a743-d1035b0d99df",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### 4. Upload polygon masks to GEE Assets\n",
+    "\n",
+    "Go to the README to see how to upload the generated polygon masks to GEE Assets. This step is necessary to process the imagery on the cloud."
+   ]
   }
  ],
  "metadata": {
