--- a/01_Create_polygon_mask.ipynb
+++ b/01_Create_polygon_mask.ipynb
@@ -257,7 +257,7 @@
     "            im0 += mask_label\n",
     "            \n",
     "    # write to a tif file\n",
-    "    fn_image = fp_image.split('\\\\')[-1].replace('.jp2','.tif')\n",
+    "    fn_image = os.path.basename(fp_image).replace('.jp2','.tif')\n",
     "    fn_im_labelled = os.path.join(fp_out_tiles_S2, fn_image)\n",
     "    # write with rasterio\n",
     "    georef2 = from_origin(georef[0]-georef[1]/2, georef[3]-georef[5]/2, georef[1], georef[1])\n",
