Uploading mask tiles with scripts

--- a/01_Create_polygon_mask.ipynb
+++ b/01_Create_polygon_mask.ipynb
@@ -36,6 +36,7 @@
    "source": [
     "# main libraries\n",
     "import os\n",
+    "import glob\n",
     "import numpy as np\n",
     "import csv\n",
     "import shutil\n",
@@ -128,7 +129,7 @@
     "\n",
     "# load Sentinel-2 tiles\n",
     "fp_tiles_S2 = os.path.join(fp_inputs,'Sentinel2_tiles')\n",
-    "fn_tiles_S2 = os.listdir(fp_tiles_S2)\n",
+    "fn_tiles_S2 = glob.glob(f'{fp_tiles_S2}/*.tif')\n",
     "print('%d Sentinel-2 tiles found:'%len(fn_tiles_S2))\n",
     "print(fn_tiles_S2)\n",
     "fp_out_tiles_S2 = os.path.join(fp_outputs,'Sentinel2_tiles_mask')\n",
@@ -162,20 +163,20 @@
    },
    "outputs": [],
    "source": [
-    "# function to read the Sentinel-2 folders\n",
-    "def list_files_recursive(folder_path):\n",
-    "    all_files = []\n",
-    "    try:\n",
-    "        # Walk through the folder and its subfolders\n",
-    "        for root, dirs, files in os.walk(folder_path):\n",
-    "            # print(f\"Files in '{root}':\")\n",
-    "            for file in files:\n",
-    "                all_files.append(os.path.join(root, file))\n",
-    "    except FileNotFoundError:\n",
-    "        print(f\"The specified folder '{folder_path}' does not exist.\")\n",
-    "    except PermissionError:\n",
-    "        print(f\"Permission error accessing the folder '{folder_path}'.\")\n",
-    "    return all_files"
+    "# # function to read the Sentinel-2 folders\n",
+    "# def list_files_recursive(folder_path):\n",
+    "#     all_files = []\n",
+    "#     try:\n",
+    "#         # Walk through the folder and its subfolders\n",
+    "#         for root, dirs, files in os.walk(folder_path):\n",
+    "#             # print(f\"Files in '{root}':\")\n",
+    "#             for file in files:\n",
+    "#                 all_files.append(os.path.join(root, file))\n",
+    "#     except FileNotFoundError:\n",
+    "#         print(f\"The specified folder '{folder_path}' does not exist.\")\n",
+    "#     except PermissionError:\n",
+    "#         print(f\"Permission error accessing the folder '{folder_path}'.\")\n",
+    "#     return all_files"
    ]
   },
   {
@@ -199,13 +200,9 @@
     }
    ],
    "source": [
-    "for fn_tile in fn_tiles_S2:\n",
-    "    tile_name = fn_tile[1:]\n",
-    "    fp_tile = os.path.join(fp_tiles_S2, fn_tile)\n",
-    "    print('Processing %s ...'%tile_name)\n",
-    "    # find one band\n",
-    "    all_files = list_files_recursive(fp_tile)\n",
-    "    fp_image = [_ for _ in all_files if np.logical_and('_B02.jp2' in _,'IMG_DATA' in _)][0]\n",
+    "for fp_image in fn_tiles_S2:\n",
+    "    tile_name = fp_image.split('/')[-1].split('.')[0].split('_')[-1][1:]\n",
+    "    print('\\nProcessing %s ...'%tile_name)\n",
     "    # load band\n",
     "    data = gdal.Open(fp_image, gdal.GA_ReadOnly)\n",
     "    georef = np.array(data.GetGeoTransform())\n",
