clean up files and adjust filepaths

--- a/01_Create_polygon_mask.ipynb
+++ b/01_Create_polygon_mask.ipynb
@@ -3,14 +3,16 @@
   {
    "cell_type": "markdown",
    "id": "546b8bc0-6e36-4b61-9c5a-8e425101d2d5",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "# 01. Create polygon mask for Sentinel-2 and Landsat tiles\n",
     "\n",
     "First step to create the polygon mask that is then ingested into GEE for processing water surface area time-series.\n",
     "\n",
     "This notebook reads in:\n",
-    "- a Sentinel-2 image (full tile)\n",
+    "- a Sentinel-2/Landsat image (full tile)\n",
     "- a spatial layer with waterbodies' boundaries\n",
     "\n",
     "And returns:\n",
@@ -74,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "id": "f7af498b-48de-45bb-9980-fd2fc3a0b3aa",
    "metadata": {
     "tags": []
@@ -84,10 +86,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1254 polygons loaded\n",
+      "561 polygons loaded\n",
       "0 empty polygons removed from OFS\n",
+      "GEEID field already exists in polygon layer\n",
       "1 Sentinel-2 tiles found:\n",
-      "['T55JGH']\n",
+      "['C:\\\\Users\\\\vosk01\\\\Documents\\\\Github\\\\time-series-OFS\\\\inputs\\\\Sentinel2_tiles\\\\20231213T001111_20231213T001105_T55JGH.tif']\n",
       "1 Landsat tiles found:\n",
       "['LC08_L1TP_091080_20231115_20231122_02_T1_B2.TIF']\n"
      ]
@@ -118,9 +121,12 @@
     "    gdf_OFS.drop(idx_empty, inplace=True)\n",
     "print('%d empty polygons removed from OFS'%len(idx_empty))\n",
     "\n",
-    "# create a unique id for processing in GEE\n",
-    "gdf_OFS['GEEID'] = ['OFS_%05d'%_ for _ in np.arange(1,len(gdf_OFS)+1)]\n",
-    "\n",
+    "# create a unique id for processing in GEE (if does not exist already)\n",
+    "if not 'GEEID' in gdf_OFS.columns: \n",
+    "    gdf_OFS['GEEID'] = ['OFS_%05d'%_ for _ in np.arange(1,len(gdf_OFS)+1)]\n",
+    "else:\n",
+    "    print('GEEID field already exists in polygon layer')\n",
+    "    \n",
     "# reset indices\n",
     "gdf_OFS.index = np.arange(len(gdf_OFS))\n",
     "\n",
@@ -132,7 +138,7 @@
     "fn_tiles_S2 = glob.glob(f'{fp_tiles_S2}/*.tif')\n",
     "print('%d Sentinel-2 tiles found:'%len(fn_tiles_S2))\n",
     "print(fn_tiles_S2)\n",
-    "fp_out_tiles_S2 = os.path.join(fp_outputs,'Sentinel2_tiles_mask')\n",
+    "fp_out_tiles_S2 = os.path.join(fp_outputs,'polygon_masks','Sentinel2_tiles_mask')\n",
     "if not os.path.exists(fp_out_tiles_S2): os.makedirs(fp_out_tiles_S2)\n",
     "\n",
     "# load Landsat tiles\n",
@@ -140,7 +146,7 @@
     "fn_tiles_L = os.listdir(fp_tiles_L)\n",
     "print('%d Landsat tiles found:'%len(fn_tiles_L))\n",
     "print(fn_tiles_L)\n",
-    "fp_out_tiles_L = os.path.join(fp_outputs,'Landsat_tiles_mask')\n",
+    "fp_out_tiles_L = os.path.join(fp_outputs,'polygon_masks','Landsat_tiles_mask')\n",
     "if not os.path.exists(fp_out_tiles_L): os.makedirs(fp_out_tiles_L)"
    ]
   },
@@ -156,14 +162,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "8d644ae6-d614-4575-b915-4d32c171d061",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "# # function to read the Sentinel-2 folders\n",
+    "# # function to read the Sentinel-2 folders downloaded for Earth Explorer\n",
     "# def list_files_recursive(folder_path):\n",
     "#     all_files = []\n",
     "#     try:\n",
@@ -181,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "id": "3ff99b3b-a512-4e6b-82f6-d83c7920e9f3",
    "metadata": {
     "tags": []
@@ -191,11 +197,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "\n",
       "Processing 55JGH ...\n",
       "Image EPSG:32755\n",
-      "coordinates are in epsg:4326\n",
+      "coordinates are in epsg:32655\n",
       "coordinates converted to in epsg:32755\n",
-      "Adding polygon 1254/1254"
+      "Adding polygon 561/561"
      ]
     }
    ],
@@ -272,7 +279,7 @@
     "        dst.write(im0, 1)\n",
     "    \n",
     "# write labels dict to csv\n",
-    "write_dict_to_csv(labels, os.path.join(fp_outputs,'labels_S2.csv'))"
+    "write_dict_to_csv(labels, os.path.join(fp_outputs,'labels.csv'))"
    ]
   },
   {
@@ -365,8 +372,8 @@
     "    georef2 = from_origin(georef[0]-georef[1]/2, georef[3]-georef[5]/2, georef[1], georef[1])\n",
     "    metadata = {\n",
     "        'driver': 'GTiff',\n",
-    "        'count': 1, \n",
-    "        'dtype': 'int16',  \n",
+    "        'count': 1,\n",
+    "        'dtype': 'int16',\n",
     "        'width': im0.shape[1],\n",
     "        'height': im0.shape[0],\n",
     "        'crs': 'EPSG:%d'%epsg_image,\n",
@@ -377,7 +384,7 @@
     "        dst.write(im0, 1)\n",
     "        \n",
     "# write labels dict to csv\n",
-    "write_dict_to_csv(labels, os.path.join(fp_outputs,'labels_Landsat.csv'))"
+    "write_dict_to_csv(labels, os.path.join(fp_outputs,'labels.csv'))"
    ]
   },
   {
