--- a/02_Upload_polygon_mask_to_bucket.ipynb
+++ b/02_Upload_polygon_mask_to_bucket.ipynb
@@ -160,7 +160,7 @@
     }
    ],
    "source": [
-    "fp_outputs = os.path.join(os.getcwd(), 'outputs')\n",
+    "fp_outputs = os.path.join(os.getcwd(), 'outputs','polygon_masks')\n",
     "print(fp_outputs)\n",
     "# load Sentinel-2 tiles\n",
     "fp_tiles_S2 = os.path.join(fp_outputs,'Sentinel2_tiles_mask')\n",
