--- a/03_Upload_bucket_to_EE_asset.ipynb
+++ b/03_Upload_bucket_to_EE_asset.ipynb
@@ -286,7 +286,7 @@
     }
    ],
    "source": [
-    "fp_outputs = os.path.join(os.getcwd(),'outputs/')\n",
+    "fp_outputs = os.path.join(os.getcwd(),'outputs')\n",
     "fp_json = os.path.join(fp_outputs,'json_manifest')\n",
     "if not os.path.exists(fp_json):\n",
     "    os.makedirs(fp_json)\n",
