Minor revisions and create collection in scripts

--- a/03_Upload_bucket_to_EE_asset.ipynb
+++ b/03_Upload_bucket_to_EE_asset.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 20,
    "metadata": {
     "executionInfo": {
      "elapsed": 1343,
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 22,
    "metadata": {
     "executionInfo": {
      "elapsed": 13867,
@@ -59,48 +59,16 @@
     "id": "FkfczT_pN66h",
     "tags": []
    },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<p>To authorize access needed by Earth Engine, open the following\n",
-       "        URL in a web browser and follow the instructions:</p>\n",
-       "        <p><a href=https://code.earthengine.google.com/client-auth?scopes=https%3A//www.googleapis.com/auth/earthengine%20https%3A//www.googleapis.com/auth/devstorage.full_control&request_id=6S9F-4Hlyntoxh092K6k63BXXz-p4s46yFOZnaO_YcM&tc=Qw0UMYnq3z21dQ3lhzHvgvI1Iz8BoI_kU4iSQmXV0TQ&cc=2tKGkDHinnInB8dACgCiDBJ4DhQyoE3xywfq57iHWmI>https://code.earthengine.google.com/client-auth?scopes=https%3A//www.googleapis.com/auth/earthengine%20https%3A//www.googleapis.com/auth/devstorage.full_control&request_id=6S9F-4Hlyntoxh092K6k63BXXz-p4s46yFOZnaO_YcM&tc=Qw0UMYnq3z21dQ3lhzHvgvI1Iz8BoI_kU4iSQmXV0TQ&cc=2tKGkDHinnInB8dACgCiDBJ4DhQyoE3xywfq57iHWmI</a></p>\n",
-       "        <p>The authorization workflow will generate a code, which you should paste in the box below.</p>\n",
-       "        "
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      "Enter verification code:  4/1AQlEd8x0RDUhwiv-cPMfwITWjOt-LBrS3-bc9nyWbcGgPa_194cTybyJcOk\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Successfully saved authorization token.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Authenticate and Initialize ee\n",
-    "ee.Authenticate()\n",
+    "# ee.Authenticate()\n",
     "ee.Initialize(project='nsw-dpe-gee-tst')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -119,23 +87,7 @@
     "outputId": "0c47fe85-1787-4bb2-dea6-9c9e28adaed1",
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Your browser has been opened to visit:\n",
-      "\n",
-      "    https://accounts.google.com/o/oauth2/auth?response_type=code&client_id=32555940559.apps.googleusercontent.com&redirect_uri=http%3A%2F%2Flocalhost%3A8085%2F&scope=openid+https%3A%2F%2Fwww.googleapis.com%2Fauth%2Fuserinfo.email+https%3A%2F%2Fwww.googleapis.com%2Fauth%2Fcloud-platform+https%3A%2F%2Fwww.googleapis.com%2Fauth%2Fappengine.admin+https%3A%2F%2Fwww.googleapis.com%2Fauth%2Fsqlservice.login+https%3A%2F%2Fwww.googleapis.com%2Fauth%2Fcompute+https%3A%2F%2Fwww.googleapis.com%2Fauth%2Faccounts.reauth&state=crtdmd3eInGW6kpNkyt6JaC4xjxI3P&access_type=offline&code_challenge=n0kqE7CihoXRsoYAiotDNVGm2FJBU3rgf4oaNB0vok4&code_challenge_method=S256\n",
-      "\n",
-      "\n",
-      "You are now logged in as [kilian.vos@dpie.nsw.gov.au].\n",
-      "Your current project is [nsw-dpe-gee-tst].  You can change this setting by running:\n",
-      "  $ gcloud config set project PROJECT_ID\n",
-      "Updated property [core/project].\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "! gcloud auth login\n",
     "! gcloud config set project nsw-dpe-gee-tst"
@@ -150,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 23,
    "metadata": {
     "executionInfo": {
      "elapsed": 348,
@@ -211,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 24,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -249,7 +201,49 @@
     "# GEE Assets args set up\n",
     "PROJ_NAME = 'nsw-dpe-gee-tst'\n",
     "ASSETS_SUB_FOLDER = 'OFS' # Can be nested folder, e.g., OFS/sub_folder\n",
-    "IMAGE_COLLECTION_NAME = f'exp_baseOFS_{sat_name}_tiles_1'"
+    "IMAGE_COLLECTION_NAME = f'exp_baseOFS_{sat_name}_tiles_1'\n",
+    "\n",
+    "image_collection_id = f'projects/{PROJ_NAME}/assets/{ASSETS_SUB_FOLDER}/{IMAGE_COLLECTION_NAME}'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "No existing asset found at projects/nsw-dpe-gee-tst/assets/OFS/exp_baseOFS_Sentinel2_tiles_1, proceeding to create new one\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'type': 'IMAGE_COLLECTION',\n",
+       " 'name': 'projects/nsw-dpe-gee-tst/assets/OFS/exp_baseOFS_Sentinel2_tiles_1',\n",
+       " 'id': 'projects/nsw-dpe-gee-tst/assets/OFS/exp_baseOFS_Sentinel2_tiles_1',\n",
+       " 'updateTime': '2024-08-21T09:02:25.177207Z'}"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Create the ImageCollection\n",
+    "# Check if the asset already exists\n",
+    "try:\n",
+    "    ee.data.getAsset(image_collection_id)\n",
+    "    # If the asset exists, delete it\n",
+    "    ee.data.deleteAsset(image_collection_id)\n",
+    "    print(f'Deleted existing asset at {image_collection_id}')\n",
+    "except:\n",
+    "    print(f'No existing asset found at {image_collection_id}, proceeding to create new one')\n",
+    "\n",
+    "ee.data.createAsset({'type': 'ImageCollection'}, image_collection_id)"
    ]
   },
   {
@@ -261,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "metadata": {
     "executionInfo": {
      "elapsed": 2147,
@@ -281,7 +275,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "18 polygon masks found in cloud bucket\n"
+      "17 polygon masks found in cloud bucket\n"
      ]
     }
    ],
@@ -291,7 +285,7 @@
     "if not os.path.exists(fp_json):\n",
     "    os.makedirs(fp_json)\n",
     "# JSON file template\n",
-    "src_file = glob.glob(f'{fp_outputs}Template_{sat_name}_tileset.json')[0]\n",
+    "src_file = glob.glob(f'{fp_outputs}/Template_{sat_name}_tileset.json')[0]\n",
     "blobs_lst = list_blobs(BUCKET_NAME, FOLDER_PATH)\n",
     "upload_lst = [blob for blob in blobs_lst if '.tif' in blob.name]\n",
     "print('%d polygon masks found in cloud bucket'%len(upload_lst))"
@@ -306,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "metadata": {
     "executionInfo": {
      "elapsed": 9812,
@@ -326,7 +320,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "18 polygon masks uploaded to GEE Assets under projects/nsw-dpe-gee-tst/assets/OFS/exp_baseOFS_Sentinel2_tiles_1/T55JGH_20231213T001111_B02\n"
+      "17 polygon masks uploaded to GEE Assets under projects/nsw-dpe-gee-tst/assets/OFS/exp_baseOFS_Sentinel2_tiles_1\n"
      ]
     }
    ],
@@ -338,7 +332,7 @@
     "    tile = file_name.split('_')[-1]\n",
     "    dst_file = f'{fp_json}/{sat_name}_EE_upload_{tile}.json'\n",
     "    shutil.copy(src_file, dst_file)\n",
-    "    assets_name = f'projects/{PROJ_NAME}/assets/{ASSETS_SUB_FOLDER}/{IMAGE_COLLECTION_NAME}/{file_name}'\n",
+    "    assets_name = f'{image_collection_id}/{file_name}'\n",
     "    source_arg = {\n",
     "        \"uris\": [\n",
     "            f\"gs://{BUCKET_NAME}/{blob_name}\"\n",
@@ -356,15 +350,8 @@
     "    with open(f'{dst_file}') as f:\n",
     "        params = json.load(f)\n",
     "    ee.data.startIngestion(request_id=reqID, params=params)\n",
-    "print('%d polygon masks uploaded to GEE Assets under %s'%(len(upload_lst),assets_name))"
+    "print('%d polygon masks uploaded to GEE Assets under %s'%(len(upload_lst),image_collection_id))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -387,7 +374,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
