--- a/04_Reset_EE_asset_collection.ipynb
+++ b/04_Reset_EE_asset_collection.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {
     "executionInfo": {
      "elapsed": 376,
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {
     "executionInfo": {
      "elapsed": 13301,
@@ -50,32 +50,7 @@
     },
     "id": "muNCxeG9asmT"
    },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<p>To authorize access needed by Earth Engine, open the following\n",
-       "        URL in a web browser and follow the instructions:</p>\n",
-       "        <p><a href=https://code.earthengine.google.com/client-auth?scopes=https%3A//www.googleapis.com/auth/earthengine%20https%3A//www.googleapis.com/auth/devstorage.full_control&request_id=STVOGF4YPZK9iHP4cjKVW6XyOKgpU10hWgaBhOMs8T0&tc=vAGNCFV8lNrb-Qkpv9I2C7bi1F8duRTNKrLAxIKCLiE&cc=IRUUPUxODMPfMGy_CQFHloDe3-1GP-Pi5sJquYAe0sI>https://code.earthengine.google.com/client-auth?scopes=https%3A//www.googleapis.com/auth/earthengine%20https%3A//www.googleapis.com/auth/devstorage.full_control&request_id=STVOGF4YPZK9iHP4cjKVW6XyOKgpU10hWgaBhOMs8T0&tc=vAGNCFV8lNrb-Qkpv9I2C7bi1F8duRTNKrLAxIKCLiE&cc=IRUUPUxODMPfMGy_CQFHloDe3-1GP-Pi5sJquYAe0sI</a></p>\n",
-       "        <p>The authorization workflow will generate a code, which you should paste in the box below.</p>\n",
-       "        "
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Successfully saved authorization token.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Authenticate and Initialize ee\n",
     "ee.Authenticate()\n",
@@ -84,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {
     "executionInfo": {
      "elapsed": 384,
@@ -101,12 +76,14 @@
    "outputs": [],
    "source": [
     "# Define the ImageCollection wish to delete\n",
-    "COLLECTION = ee.ImageCollection('projects/nsw-dpe-gee-tst/assets/OFS/exp_baseOFS_Sentinel2_tiles_1')"
+    "COLLECTION_ID = f'projects/nsw-dpe-gee-tst/assets/OFS/exp_baseOFS_Sentinel2_tiles_1'\n",
+    "\n",
+    "collection = ee.ImageCollection(COLLECTION_ID)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {
     "executionInfo": {
      "elapsed": 1,
@@ -131,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -149,40 +126,25 @@
     "id": "dmuQcYDqa4gm",
     "outputId": "48e4bc94-850a-4960-877c-80d6d5efd687"
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Deleted projects/nsw-dpe-gee-tst/assets/OFS/exp_baseOFS_Sentinel2_tiles_1/20231213T001111_20231213T001105_T55HEE\n",
-      "Deleted projects/nsw-dpe-gee-tst/assets/OFS/exp_baseOFS_Sentinel2_tiles_1/20231213T001111_20231213T001105_T55HFE\n",
-      "Deleted projects/nsw-dpe-gee-tst/assets/OFS/exp_baseOFS_Sentinel2_tiles_1/20231213T001111_20231213T001105_T55JDG\n",
-      "Deleted projects/nsw-dpe-gee-tst/assets/OFS/exp_baseOFS_Sentinel2_tiles_1/20231213T001111_20231213T001105_T55JEF\n",
-      "Deleted projects/nsw-dpe-gee-tst/assets/OFS/exp_baseOFS_Sentinel2_tiles_1/20231213T001111_20231213T001105_T55JEG\n",
-      "Deleted projects/nsw-dpe-gee-tst/assets/OFS/exp_baseOFS_Sentinel2_tiles_1/20231213T001111_20231213T001105_T55JFF\n",
-      "Deleted projects/nsw-dpe-gee-tst/assets/OFS/exp_baseOFS_Sentinel2_tiles_1/20231213T001111_20231213T001105_T55JFG\n",
-      "Deleted projects/nsw-dpe-gee-tst/assets/OFS/exp_baseOFS_Sentinel2_tiles_1/20231213T001111_20231213T001105_T55JFH\n",
-      "Deleted projects/nsw-dpe-gee-tst/assets/OFS/exp_baseOFS_Sentinel2_tiles_1/20231213T001111_20231213T001105_T55JGF\n",
-      "Deleted projects/nsw-dpe-gee-tst/assets/OFS/exp_baseOFS_Sentinel2_tiles_1/20231213T001111_20231213T001105_T55JGG\n",
-      "Deleted projects/nsw-dpe-gee-tst/assets/OFS/exp_baseOFS_Sentinel2_tiles_1/20231213T001111_20231213T001105_T55JGH\n",
-      "Deleted projects/nsw-dpe-gee-tst/assets/OFS/exp_baseOFS_Sentinel2_tiles_1/20231213T001111_20231213T001105_T55JGJ\n",
-      "Deleted projects/nsw-dpe-gee-tst/assets/OFS/exp_baseOFS_Sentinel2_tiles_1/20231213T001111_20231213T001105_T56JKL\n",
-      "Deleted projects/nsw-dpe-gee-tst/assets/OFS/exp_baseOFS_Sentinel2_tiles_1/20231213T001111_20231213T001105_T56JKM\n",
-      "Deleted projects/nsw-dpe-gee-tst/assets/OFS/exp_baseOFS_Sentinel2_tiles_1/20231213T001111_20231213T001105_T56JKN\n",
-      "Deleted projects/nsw-dpe-gee-tst/assets/OFS/exp_baseOFS_Sentinel2_tiles_1/20231213T001111_20231213T001105_T56JKP\n",
-      "Deleted projects/nsw-dpe-gee-tst/assets/OFS/exp_baseOFS_Sentinel2_tiles_1/20231214T002709_20231214T003459_T55JCG\n",
-      "Images deleted successfully. Now you can re-upload tiles using 03_Ingest_tiles_to_EEAssets.ipynb\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Get the list of images to delete.\n",
-    "image_list = COLLECTION.toList(COLLECTION.size())\n",
+    "image_list = collection.toList(collection.size())\n",
     "\n",
     "# Loop through the list and delete each image.\n",
     "for i in range(image_list.size().getInfo()):\n",
     "    image = ee.Image(image_list.get(0))\n",
     "    delete_image(image)\n",
+    "\n",
+    "# Delete the image collection\n",
+    "# Check if the asset already exists\n",
+    "try:\n",
+    "    ee.data.getAsset(COLLECTION_ID)\n",
+    "    # If the asset exists, delete it\n",
+    "    ee.data.deleteAsset(COLLECTION_ID)\n",
+    "    print(f'Deleted existing asset at {COLLECTION_ID}')\n",
+    "except:\n",
+    "    print(f'No existing asset found at {COLLECTION_ID}')\n",
     "\n",
     "print('Images deleted successfully. Now you can re-upload tiles using 03_Ingest_tiles_to_EEAssets.ipynb')"
    ]
@@ -208,7 +170,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
