Download, process, and upload Landsat polygon masks

--- a/03_Upload_bucket_to_EE_asset.ipynb
+++ b/03_Upload_bucket_to_EE_asset.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 13,
    "metadata": {
     "executionInfo": {
      "elapsed": 1343,
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 14,
    "metadata": {
     "executionInfo": {
      "elapsed": 13867,
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 15,
    "metadata": {
     "executionInfo": {
      "elapsed": 348,
@@ -163,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 16,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -187,47 +187,48 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Polygon masks from satellite: Sentinel2\n"
+      "Polygon masks from satellite: Landsat\n"
      ]
     }
    ],
    "source": [
     "# Buckets args set up\n",
     "BUCKET_NAME = 'label-tiles'\n",
-    "FOLDER_PATH = 'Sentinel2_tiles_mask/'\n",
+    "FOLDER_PATH = 'Landsat_tiles_mask/'\n",
+    "\n",
     "sat_name = FOLDER_PATH.split('_')[0]\n",
     "print('Polygon masks from satellite:', sat_name)\n",
     "\n",
     "# GEE Assets args set up\n",
     "PROJ_NAME = 'nsw-dpe-gee-tst'\n",
     "ASSETS_SUB_FOLDER = 'OFS' # Can be nested folder, e.g., OFS/sub_folder\n",
-    "IMAGE_COLLECTION_NAME = f'exp_baseOFS_{sat_name}_tiles_1'\n",
+    "IMAGE_COLLECTION_NAME = f'exp_baseOFS_{sat_name}_tiles'\n",
     "\n",
     "image_collection_id = f'projects/{PROJ_NAME}/assets/{ASSETS_SUB_FOLDER}/{IMAGE_COLLECTION_NAME}'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "No existing asset found at projects/nsw-dpe-gee-tst/assets/OFS/exp_baseOFS_Sentinel2_tiles_1, proceeding to create new one\n"
+      "Deleted existing asset at projects/nsw-dpe-gee-tst/assets/OFS/exp_baseOFS_Landsat_tiles, proceeding to create a new one\n"
      ]
     },
     {
      "data": {
       "text/plain": [
        "{'type': 'IMAGE_COLLECTION',\n",
-       " 'name': 'projects/nsw-dpe-gee-tst/assets/OFS/exp_baseOFS_Sentinel2_tiles_1',\n",
-       " 'id': 'projects/nsw-dpe-gee-tst/assets/OFS/exp_baseOFS_Sentinel2_tiles_1',\n",
-       " 'updateTime': '2024-08-21T09:02:25.177207Z'}"
+       " 'name': 'projects/nsw-dpe-gee-tst/assets/OFS/exp_baseOFS_Landsat_tiles',\n",
+       " 'id': 'projects/nsw-dpe-gee-tst/assets/OFS/exp_baseOFS_Landsat_tiles',\n",
+       " 'updateTime': '2024-08-22T09:02:26.675812Z'}"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -235,13 +236,14 @@
    "source": [
     "# Create the ImageCollection\n",
     "# Check if the asset already exists\n",
+    "# Make sure all images in the ImageCollection have been deleted using 04_Reset_EE_asset_collection.ipynb prior to re-create the ImageCollection\n",
     "try:\n",
     "    ee.data.getAsset(image_collection_id)\n",
     "    # If the asset exists, delete it\n",
     "    ee.data.deleteAsset(image_collection_id)\n",
-    "    print(f'Deleted existing asset at {image_collection_id}')\n",
+    "    print(f'Deleted existing asset at {image_collection_id}, proceeding to create a new one')\n",
     "except:\n",
-    "    print(f'No existing asset found at {image_collection_id}, proceeding to create new one')\n",
+    "    print(f'No existing asset found at {image_collection_id}, proceeding to create a new one')\n",
     "\n",
     "ee.data.createAsset({'type': 'ImageCollection'}, image_collection_id)"
    ]
@@ -255,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 21,
    "metadata": {
     "executionInfo": {
      "elapsed": 2147,
@@ -275,7 +277,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "17 polygon masks found in cloud bucket\n"
+      "3 polygon masks found in cloud bucket\n"
      ]
     }
    ],
@@ -285,7 +287,7 @@
     "if not os.path.exists(fp_json):\n",
     "    os.makedirs(fp_json)\n",
     "# JSON file template\n",
-    "src_file = glob.glob(f'{fp_outputs}/Template_{sat_name}_tileset.json')[0]\n",
+    "src_file = glob.glob(f'{fp_outputs}/Template_tileset.json')[0]\n",
     "blobs_lst = list_blobs(BUCKET_NAME, FOLDER_PATH)\n",
     "upload_lst = [blob for blob in blobs_lst if '.tif' in blob.name]\n",
     "print('%d polygon masks found in cloud bucket'%len(upload_lst))"
@@ -300,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 22,
    "metadata": {
     "executionInfo": {
      "elapsed": 9812,
@@ -320,7 +322,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "17 polygon masks uploaded to GEE Assets under projects/nsw-dpe-gee-tst/assets/OFS/exp_baseOFS_Sentinel2_tiles_1\n"
+      "3 polygon masks uploaded to GEE Assets under projects/nsw-dpe-gee-tst/assets/OFS/exp_baseOFS_Landsat_tiles\n"
      ]
     }
    ],
@@ -329,8 +331,22 @@
     "for blob in upload_lst:\n",
     "    blob_name = blob.name\n",
     "    file_name = blob_name.split('/')[1].split('.')[0]\n",
-    "    tile = file_name.split('_')[-1]\n",
-    "    dst_file = f'{fp_json}/{sat_name}_EE_upload_{tile}.json'\n",
+    "    if sat_name == 'Sentinel2':\n",
+    "        tile = file_name.split('_')[-1][1:] # 'T' needs to be removed\n",
+    "        # add tile property to the image object\n",
+    "        tile_arg = {\n",
+    "            \"Tile\": f\"{tile}\"\n",
+    "            }\n",
+    "        dst_file = f'{fp_json}/{sat_name}_EE_upload_{tile}.json'\n",
+    "    else:\n",
+    "        path = int(file_name.split('_')[1][0:3])\n",
+    "        row = int(file_name.split('_')[1][3:6])\n",
+    "        # add tile property to the image object\n",
+    "        tile_arg = {\n",
+    "            \"Path\": path,\n",
+    "            \"Row\": row\n",
+    "            }\n",
+    "        dst_file = f'{fp_json}/{sat_name}_EE_upload_{path}{row}.json'\n",
     "    shutil.copy(src_file, dst_file)\n",
     "    assets_name = f'{image_collection_id}/{file_name}'\n",
     "    source_arg = {\n",
@@ -338,10 +354,6 @@
     "            f\"gs://{BUCKET_NAME}/{blob_name}\"\n",
     "            ]\n",
     "        }\n",
-    "    # add tile property to the image object\n",
-    "    tile_arg = {\n",
-    "        \"Tile\": f\"{tile[1:]}\" # 'T' needs to be removed\n",
-    "    }\n",
     "    # Change the base name in the json file\n",
     "    write_json(assets_name, dst_file)\n",
     "    write_json_manifest_multi_tiles(source_arg, tile_arg, filename=dst_file)\n",
