--- a/04_Reset_EE_asset_collection.ipynb
+++ b/04_Reset_EE_asset_collection.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {
     "executionInfo": {
      "elapsed": 376,
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {
     "executionInfo": {
      "elapsed": 13301,
@@ -53,13 +53,13 @@
    "outputs": [],
    "source": [
     "# Authenticate and Initialize ee\n",
-    "ee.Authenticate()\n",
+    "# ee.Authenticate()\n",
     "ee.Initialize(project='nsw-dpe-gee-tst')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {
     "executionInfo": {
      "elapsed": 384,
@@ -75,15 +75,15 @@
    },
    "outputs": [],
    "source": [
-    "# Define the ImageCollection wish to delete\n",
-    "COLLECTION_ID = f'projects/nsw-dpe-gee-tst/assets/OFS/exp_baseOFS_Sentinel2_tiles_1'\n",
+    "# Define the ImageCollection wish to delete, such as: exp_baseOFS_Sentinel2_tiles or exp_baseOFS_Landsat_tiles \n",
+    "COLLECTION_ID = f'projects/nsw-dpe-gee-tst/assets/OFS/exp_baseOFS_Landsat_tiles'\n",
     "\n",
     "collection = ee.ImageCollection(COLLECTION_ID)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {
     "executionInfo": {
      "elapsed": 1,
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -126,7 +126,19 @@
     "id": "dmuQcYDqa4gm",
     "outputId": "48e4bc94-850a-4960-877c-80d6d5efd687"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Deleted projects/nsw-dpe-gee-tst/assets/OFS/exp_baseOFS_Landsat_tiles/LC08_091080_20231115\n",
+      "Deleted projects/nsw-dpe-gee-tst/assets/OFS/exp_baseOFS_Landsat_tiles/LC09_092081_20231115\n",
+      "Deleted projects/nsw-dpe-gee-tst/assets/OFS/exp_baseOFS_Landsat_tiles/LC09_092083_20231115\n",
+      "Deleted existing asset at projects/nsw-dpe-gee-tst/assets/OFS/exp_baseOFS_Landsat_tiles\n",
+      "Images deleted successfully. Now you can re-upload tiles using 03_Upload_bucket_to_EE_asset.ipynb\n"
+     ]
+    }
+   ],
    "source": [
     "# Get the list of images to delete.\n",
     "image_list = collection.toList(collection.size())\n",
