--- a/01_Create_polygon_mask.ipynb
+++ b/01_Create_polygon_mask.ipynb
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "f7af498b-48de-45bb-9980-fd2fc3a0b3aa",
    "metadata": {
     "tags": []
@@ -86,13 +86,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "561 polygons loaded\n",
+      "1254 polygons loaded\n",
       "0 empty polygons removed from OFS\n",
       "GEEID field already exists in polygon layer\n",
-      "1 Sentinel-2 tiles found:\n",
-      "['C:\\\\Users\\\\vosk01\\\\Documents\\\\Github\\\\time-series-OFS\\\\inputs\\\\Sentinel2_tiles\\\\20231213T001111_20231213T001105_T55JGH.tif']\n",
-      "1 Landsat tiles found:\n",
-      "['LC08_L1TP_091080_20231115_20231122_02_T1_B2.TIF']\n"
+      "3 Sentinel-2 tiles found:\n",
+      "['c:\\\\Shirui_Hao\\\\GitHub\\\\time-series-OFS\\\\inputs\\\\Sentinel2_tiles\\\\20231213T001111_20231213T001105_T55JGG.tif', 'c:\\\\Shirui_Hao\\\\GitHub\\\\time-series-OFS\\\\inputs\\\\Sentinel2_tiles\\\\20231213T001111_20231213T001105_T55JGJ.tif', 'c:\\\\Shirui_Hao\\\\GitHub\\\\time-series-OFS\\\\inputs\\\\Sentinel2_tiles\\\\20231213T001111_20231213T001105_T56JKL.tif']\n",
+      "3 Landsat tiles found:\n",
+      "['c:\\\\Shirui_Hao\\\\GitHub\\\\time-series-OFS\\\\inputs\\\\Landsat_tiles\\\\LC08_091080_20231115.tif', 'c:\\\\Shirui_Hao\\\\GitHub\\\\time-series-OFS\\\\inputs\\\\Landsat_tiles\\\\LC09_092081_20231115.tif', 'c:\\\\Shirui_Hao\\\\GitHub\\\\time-series-OFS\\\\inputs\\\\Landsat_tiles\\\\LC09_092083_20231115.tif']\n"
      ]
     }
    ],
@@ -143,7 +143,7 @@
     "\n",
     "# load Landsat tiles\n",
     "fp_tiles_L = os.path.join(fp_inputs,'Landsat_tiles')\n",
-    "fn_tiles_L = os.listdir(fp_tiles_L)\n",
+    "fn_tiles_L = glob.glob(f'{fp_tiles_L}/*.tif')\n",
     "print('%d Landsat tiles found:'%len(fn_tiles_L))\n",
     "print(fn_tiles_L)\n",
     "fp_out_tiles_L = os.path.join(fp_outputs,'polygon_masks','Landsat_tiles_mask')\n",
@@ -169,20 +169,25 @@
    },
    "outputs": [],
    "source": [
-    "# # function to read the Sentinel-2 folders downloaded for Earth Explorer\n",
-    "# def list_files_recursive(folder_path):\n",
-    "#     all_files = []\n",
-    "#     try:\n",
-    "#         # Walk through the folder and its subfolders\n",
-    "#         for root, dirs, files in os.walk(folder_path):\n",
-    "#             # print(f\"Files in '{root}':\")\n",
-    "#             for file in files:\n",
-    "#                 all_files.append(os.path.join(root, file))\n",
-    "#     except FileNotFoundError:\n",
-    "#         print(f\"The specified folder '{folder_path}' does not exist.\")\n",
-    "#     except PermissionError:\n",
-    "#         print(f\"Permission error accessing the folder '{folder_path}'.\")\n",
-    "#     return all_files"
+    "'''\n",
+    "If Sentinel-2 data is downloaded from satellite imagery websites like USGS and comes with nested folders, run this cell.\n",
+    "\n",
+    "TODO - Need to revise the `load Sentinel-2 tiles` section and the for loop in the following cell as well\n",
+    "'''\n",
+    "# function to read the Sentinel-2 folders downloaded for Earth Explorer\n",
+    "def list_files_recursive(folder_path):\n",
+    "    all_files = []\n",
+    "    try:\n",
+    "        # Walk through the folder and its subfolders\n",
+    "        for root, dirs, files in os.walk(folder_path):\n",
+    "            # print(f\"Files in '{root}':\")\n",
+    "            for file in files:\n",
+    "                all_files.append(os.path.join(root, file))\n",
+    "    except FileNotFoundError:\n",
+    "        print(f\"The specified folder '{folder_path}' does not exist.\")\n",
+    "    except PermissionError:\n",
+    "        print(f\"Permission error accessing the folder '{folder_path}'.\")\n",
+    "    return all_files"
    ]
   },
   {
@@ -294,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "id": "01bb5816-053e-4bee-8215-5e7d2d0a300a",
    "metadata": {
     "tags": []
@@ -304,26 +309,30 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "LC08_L1TP_091080_20231115_20231122_02_T1_B2.TIF\n",
+      "\n",
       "Image EPSG:32655\n",
-      "coordinates are in epsg:32755\n",
+      "coordinates are in epsg:4326\n",
       "coordinates converted to in epsg:32655\n",
+      "Adding polygon 1254/1254\n",
+      "Image EPSG:32655\n",
+      "coordinates are in epsg:32655\n",
+      "Adding polygon 1254/1254\n",
+      "Image EPSG:32655\n",
+      "coordinates are in epsg:32655\n",
       "Adding polygon 1254/1254"
      ]
     }
    ],
    "source": [
-    "for fn_tile in fn_tiles_L:\n",
-    "    print(fn_tile)\n",
+    "for fp_im in fn_tiles_L:\n",
     "    # load tile\n",
-    "    fp_im = os.path.join(fp_tiles_L, fn_tile)\n",
     "    data = gdal.Open(fp_im, gdal.GA_ReadOnly)\n",
     "    georef = np.array(data.GetGeoTransform())\n",
     "    bands = [data.GetRasterBand(k + 1).ReadAsArray() for k in range(data.RasterCount)]\n",
     "    im = bands[0]\n",
     "    proj = osr.SpatialReference(wkt=data.GetProjection())\n",
     "    epsg_image = int(proj.GetAttrValue('AUTHORITY',1))\n",
-    "    print('Image EPSG:%d'%epsg_image)\n",
+    "    print('\\nImage EPSG:%d'%epsg_image)\n",
     "\n",
     "    # reproject vector layer to EPSG of tile\n",
     "    gdf_OFS = reproject(gdf_OFS,epsg_image)\n",
@@ -367,6 +376,7 @@
     "            im0 += mask_label\n",
     "    \n",
     "    # write to a tif file\n",
+    "    fn_tile = os.path.basename(fp_im)\n",
     "    fn_im_labelled = os.path.join(fp_out_tiles_L, fn_tile)\n",
     "    # write with rasterio\n",
     "    georef2 = from_origin(georef[0]-georef[1]/2, georef[3]-georef[5]/2, georef[1], georef[1])\n",
@@ -400,9 +410,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:coastsat] *",
+   "display_name": "Python_Proj",
    "language": "python",
-   "name": "conda-env-coastsat-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -414,7 +424,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
