--- a/02_Upload_polygon_mask_to_bucket.ipynb
+++ b/02_Upload_polygon_mask_to_bucket.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 27,
    "metadata": {
     "executionInfo": {
      "elapsed": 1214,
@@ -89,12 +89,73 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Set bucket and folder names"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Name of the cloud bucket: label-tiles\n",
+      "Name of the folder: Landsat_tiles_mask\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Set GCS bucket name\n",
+    "BUCKET_NAME = f'label-tiles'\n",
+    "\n",
+    "# Set satellite folder name, choose from: Sentinel2_tiles_mask; Landsat_tiles_mask\n",
+    "SATELLITE_FOLDER = 'Landsat_tiles_mask'\n",
+    "\n",
+    "print(f'Name of the cloud bucket: {BUCKET_NAME}\\nName of the folder: {SATELLITE_FOLDER}')\n",
+    "\n",
+    "sat_name = SATELLITE_FOLDER.split('_')[0]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Create the folder in the bucket to store images"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Folder 'Landsat_tiles_mask' is created in label-tiles\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Run this cell once to create the folder in the bucket\n",
+    "bucket = storage.Client().get_bucket(BUCKET_NAME)\n",
+    "blob = bucket.blob(f'{SATELLITE_FOLDER}/')\n",
+    "blob.upload_from_string('')\n",
+    "print(f\"Folder '{SATELLITE_FOLDER}' is created in {BUCKET_NAME}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Auxiliary function"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 34,
    "metadata": {
     "executionInfo": {
      "elapsed": 559,
@@ -130,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 35,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -154,18 +215,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\vosk01\\Documents\\Github\\time-series-OFS\\outputs\n",
-      "1 Sentinel-2 tiles found: ['C:\\\\Users\\\\vosk01\\\\Documents\\\\Github\\\\time-series-OFS\\\\outputs\\\\Sentinel2_tiles_mask\\\\T55JGH_20231213T001111_B02.tif']\n"
+      "c:\\Shirui_Hao\\GitHub\\time-series-OFS\\outputs\\polygon_masks\n",
+      "3 Landsat tiles found: ['c:\\\\Shirui_Hao\\\\GitHub\\\\time-series-OFS\\\\outputs\\\\polygon_masks\\\\Landsat_tiles_mask\\\\LC08_091080_20231115.tif', 'c:\\\\Shirui_Hao\\\\GitHub\\\\time-series-OFS\\\\outputs\\\\polygon_masks\\\\Landsat_tiles_mask\\\\LC09_092081_20231115.tif', 'c:\\\\Shirui_Hao\\\\GitHub\\\\time-series-OFS\\\\outputs\\\\polygon_masks\\\\Landsat_tiles_mask\\\\LC09_092083_20231115.tif']\n"
      ]
     }
    ],
    "source": [
-    "fp_outputs = os.path.join(os.getcwd(), 'outputs','polygon_masks')\n",
+    "fp_outputs = os.path.join(os.getcwd(), 'outputs', 'polygon_masks')\n",
     "print(fp_outputs)\n",
     "# load Sentinel-2 tiles\n",
-    "fp_tiles_S2 = os.path.join(fp_outputs,'Sentinel2_tiles_mask')\n",
-    "fn_tiles_S2 = glob.glob(f'{fp_tiles_S2}/*.tif')\n",
-    "print(f'{len(fn_tiles_S2)} Sentinel-2 tiles found: {fn_tiles_S2}')"
+    "fp_tiles = os.path.join(fp_outputs, SATELLITE_FOLDER)\n",
+    "fn_tiles = glob.glob(f'{fp_tiles}/*.tif')\n",
+    "print(f'{len(fn_tiles)} {sat_name} tiles found: {fn_tiles}')"
    ]
   },
   {
@@ -177,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 36,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -201,19 +262,50 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Name of the cloud bucket label-tiles\n",
-      "File C:\\Users\\vosk01\\Documents\\Github\\time-series-OFS\\outputs\\Sentinel2_tiles_mask\\T55JGH_20231213T001111_B02.tif uploaded to Sentinel2_tiles_mask/T55JGH_20231213T001111_B02.tif.\n"
+      "File c:\\Shirui_Hao\\GitHub\\time-series-OFS\\outputs\\polygon_masks\\Landsat_tiles_mask\\LC08_091080_20231115.tif uploaded to Landsat_tiles_mask/LC08_091080_20231115.tif.\n",
+      "File c:\\Shirui_Hao\\GitHub\\time-series-OFS\\outputs\\polygon_masks\\Landsat_tiles_mask\\LC09_092081_20231115.tif uploaded to Landsat_tiles_mask/LC09_092081_20231115.tif.\n",
+      "File c:\\Shirui_Hao\\GitHub\\time-series-OFS\\outputs\\polygon_masks\\Landsat_tiles_mask\\LC09_092083_20231115.tif uploaded to Landsat_tiles_mask/LC09_092083_20231115.tif.\n"
      ]
     }
    ],
    "source": [
-    "# Set GCS bucket name\n",
-    "BUCKET_NAME = f'label-tiles'\n",
-    "print('Name of the cloud bucket: %s'%BUCKET_NAME)\n",
     "for fn in fn_tiles_S2:\n",
     "    base_name = os.path.basename(fn)\n",
-    "    destination_blob = f'Sentinel2_tiles_mask/{base_name}'\n",
+    "    destination_blob = f'{SATELLITE_FOLDER}/{base_name}'\n",
     "    upload_blob(BUCKET_NAME, fn, destination_blob)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### ***(OPTIONAL) Only run this cell if you need to delete all files in the bucket folder***\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "All objects in folder 'Landsat_tiles_mask' have been deleted. Now you can re-upload files.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Delete all objects in the folder if needed\n",
+    "bucket = storage.Client().get_bucket(BUCKET_NAME)\n",
+    "# List all objects in the folder\n",
+    "blobs = bucket.list_blobs(prefix=SATELLITE_FOLDER)\n",
+    "\n",
+    "# Delete all objects in the folder\n",
+    "for blob in blobs:\n",
+    "    blob.delete()\n",
+    "\n",
+    "print(f\"All objects in folder '{SATELLITE_FOLDER}' have been deleted. Now you can re-create the folder and re-upload files in the bucket.\")"
    ]
   },
   {
@@ -244,7 +336,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
